Fixed spacing between name and socials

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -162,7 +162,7 @@ ul li a:hover {
 }
 
 .socials {
-    margin-left: -30rem;
+    margin-left: -34rem;
     margin-right: -20rem;
     height: 50px;
     font-weight: bold;
